{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 25,
  "lineage": "bc2acfb6-2fe5-fcb6-548b-22e6ef5b2954",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hello-world-apache-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04f5097681773b989",
            "arn": "arn:aws:ec2:ap-southeast-2:125134798357:instance/i-0ebb8af737de78a7c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ebb8af737de78a7c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03e52d06069bafed8",
            "private_dns": "ip-172-31-27-111.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.27.111",
            "public_dns": "ec2-3-107-3-151.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.107.3.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06a96550c745b1ea8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "http"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-54f4b20c",
            "tags": {
              "Name": "hello-world-apache-vpc",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "hello-world-apache-vpc",
              "employee": "Roger Almeida"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d1aa79f962ab3a60"
            ]
          },
          "dependencies": [
            "aws_security_group.http",
            "module.ami-ubuntu.data.aws_ssm_parameter.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:125134798357:internet-gateway/igw-0a30012bcaf5f453d",
            "id": "igw-0a30012bcaf5f453d",
            "owner_id": "125134798357",
            "tags": {
              "Name": "hello-world-apache-vpc",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "hello-world-apache-vpc",
              "employee": "Roger Almeida"
            },
            "vpc_id": "vpc-0475aca414c0c8d85"
          },
          "dependencies": [
            "aws_vpc.hello-world-apache-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:125134798357:route-table/rtb-09a0366e7092b18cf",
            "id": "rtb-09a0366e7092b18cf",
            "owner_id": "125134798357",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a30012bcaf5f453d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hello-world-apache-vpc",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "hello-world-apache-vpc",
              "employee": "Roger Almeida"
            },
            "timeouts": null,
            "vpc_id": "vpc-0475aca414c0c8d85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.hello-world-apache-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa01cfd3966d648f",
            "route_table_id": "rtb-09a0366e7092b18cf",
            "subnet_id": "subnet-0d22deb93b1c01acb"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.hello-world-apache-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:125134798357:security-group/sg-0d1aa79f962ab3a60",
            "description": "Allow inbound and outbound HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1aa79f962ab3a60",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http",
            "name_prefix": "",
            "owner_id": "125134798357",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hello-world-apache-vpc",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "hello-world-apache-vpc",
              "employee": "Roger Almeida"
            },
            "timeouts": null,
            "vpc_id": "vpc-a510ffc3"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:125134798357:subnet/subnet-0d22deb93b1c01acb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d22deb93b1c01acb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "125134798357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hello-world-apache-vpc",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "hello-world-apache-vpc",
              "employee": "Roger Almeida"
            },
            "vpc_id": "vpc-0475aca414c0c8d85"
          },
          "dependencies": [
            "aws_vpc.hello-world-apache-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hello-world-apache-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:125134798357:vpc/vpc-0475aca414c0c8d85",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0690ffd57ee99b743",
            "default_route_table_id": "rtb-05cf1db8eb3dd2199",
            "default_security_group_id": "sg-0ea2c9d4bf877e23b",
            "dhcp_options_id": "dopt-ac8188cb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0475aca414c0c8d85",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05cf1db8eb3dd2199",
            "owner_id": "125134798357",
            "tags": {
              "Name": "hello-world-apache-vpc",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "hello-world-apache-vpc",
              "employee": "Roger Almeida"
            }
          }
        }
      ]
    }
  ]
}